# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  colorMapLoader.cpp  main.cpp  mandelbrot.cpp
output/: frame00000.ppm  frame00001.ppm  frame00002.ppm  frame00003.ppm  frame00004.ppm  frame00005.ppm  frame00006.ppm  frame00007.ppm  frame00008.ppm  frame00009.ppm  frame00010.ppm  frame00011.ppm  frame00012.ppm  frame00013.ppm  frame00014.ppm  frame00015.ppm  frame00016.ppm  frame00017.ppm  frame00018.ppm  frame00019.ppm  frame00020.ppm  frame00021.ppm  frame00022.ppm  frame00023.ppm  frame00024.ppm  frame00025.ppm  frame00026.ppm  frame00027.ppm  frame00028.ppm  frame00029.ppm  frame00030.ppm  frame00031.ppm  frame00032.ppm  frame00033.ppm  frame00034.ppm  frame00035.ppm  frame00036.ppm  frame00037.ppm  frame00038.ppm  frame00039.ppm  (+751 more)
